--- a/EARoot/EA4.html
+++ b/EARoot/EA4.html
@@ -34,15 +34,15 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("", " : "))</script> Casos de Uso : Public  &lt;&lt;NavigationCell&gt;&gt; Hyperlink</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("", " : "))</script>  : Public   Text</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">24-01-2023 19:45:41</td>
+			<td width="85%" class="ObjectDetailsValue">24-01-2023 20:13:29</td>
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">30-01-2023 9:18:03</td>
+			<td class="ObjectDetailsValue">24-01-2023 20:16:12</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -87,32 +87,15 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="adv00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{91FA6FF4-9CE9-41de-98A4-57D0B54A6AB3}</td>
+			<td class="ObjectDetailsValue">{5AD74538-2219-4e1c-B70A-A7E46A5BAB52}</td>
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="EA1.html">Menu Principal</a></td>
+			<td class="ObjectDetailsValue"><a href="EA1.html">Introduccion</a></td>
 		</tr>
 	</table>
-	
-	<div class="TableGroup" id="TableGroup">
-		<ul class="ItemTitle">
-			<li onClick="parent.toggleItem('CustomProperties');" id="CustomPropertiesTitle">Advanced</li>
-		</ul>
-		<div class="ItemBody" id="CustomPropertiesTable">
-			<table border="0" cellspacing="0" cellpadding="0" class="Table">
-				<tr>
-					<td width="30%" class="TableHeading">Property</td>
-					<td width="70%" class="TableHeading">Value</td>
-				</tr>
-			<tr>
-				<td width="30%" class="TableRow">DiagLinkType:</td>
-				<td width="70%" class="TableRow">Structural</td>
-			</tr>
+	<div class="ObjectDetailsNotes">Una API (Application Programming Interface) es un aplicativo que se encarga de comunicar mensajes entre distintos actores. &lt;br/&gt;Se puede ver como un mensajero el cual se ocupar&#237;a de llevar de manera r&#225;pida estos mensajes a diversos sistemas para esperar una respuesta y realizar una acci&#243;n. &lt;br/&gt;Lo anterior se refiere a acciones sobre una base de datos o sobre otro servicio.&lt;br/&gt;</div>
 
-
-			</table>
-		</div>	</div>
 <div class="pageFooter"></div>
  
 </body>
