--- a/EARoot/EA6.html
+++ b/EARoot/EA6.html
@@ -34,15 +34,15 @@ function nameClassifier(name, separator)
 <div class="pageHeader"></div>
 <div class="PageBody">
 	<div id="name_classifier" style="display: none;"></div>
-	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("", " : "))</script> Demo : Public  &lt;&lt;NavigationCell&gt;&gt; Hyperlink</span>
+	<span class="ObjectTitle"><script type="text/javascript">document.write(nameClassifier("", " : "))</script> Menu Principal : Public  &lt;&lt;NavigationCell&gt;&gt; Hyperlink</span>
 	<table border="0" cellpadding="0" cellspacing="0" class="ObjectDetails">
 		<tr>
 			<td width="15%" class="ObjectDetailsTopic">Created:</td>
-			<td width="85%" class="ObjectDetailsValue">02-02-2023 12:17:30</td>
+			<td width="85%" class="ObjectDetailsValue">24-01-2023 17:59:56</td>
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">02-02-2023 12:17:30</td>
+			<td class="ObjectDetailsValue">30-01-2023 16:44:51</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -51,7 +51,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="proj00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Author:</td>
-			<td class="ObjectDetailsValue">Alejandro Cortes</td>
+			<td class="ObjectDetailsValue">aleja</td>
 		</tr>
 		<tr id="proj01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Version:</td>
@@ -87,11 +87,11 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr id="adv00" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">UUID:</td>
-			<td class="ObjectDetailsValue">{69DD0AED-8A4C-43f5-9469-80FE324349D4}</td>
+			<td class="ObjectDetailsValue">{45DA12C7-9042-4c49-933E-F0FB11045470}</td>
 		</tr>
 		<tr id="adv01" style="display: none;">
 			<td class="ObjectDetailsTopic" style="padding-left: 18px;">Appears In:</td>
-			<td class="ObjectDetailsValue"><a href="EA1.html">Menu Principal</a></td>
+			<td class="ObjectDetailsValue"><a href="EA1.html">Introduccion</a></td>
 		</tr>
 	</table>
 	
